# HealthDesk

./: .gitignore  CLAUDE.md  LICENSE_TERMS.rtf  TODO.md  ads.py  audio_engine.py  build.py  config.py  database.py  generate_icon.py  i18n.py  index.html  installer.iss  main.py  main.pyw  package-lock.json  package.json  popup_manager.py  requirements.txt  scheduler.py  telemetry.py  tracker.py  tray.py  updater.py  vite.config.ts  yt_player.py
.github/workflows/: release.yml
landing/: build.js  deploy.js  extract-i18n.js  gsc-index.js  index.html  package-lock.json  package.json  privacy.html  robots.txt  sitemap.xml  style.css
landing/assets/: style.css
landing/studio/: package-lock.json  package.json  server.js
locales/: de.json  en.json  es.json  fr.json  it.json  ja.json  ko.json  pl.json  pt-BR.json  ru.json  tr.json  zh-CN.json
server/: requirements.txt
server/app/: auth.py  database.py  main.py  models.py
server/deploy/: GITHUB-RELEASES.md  deploy-landing.sh  healthdesk-api.service  nginx-healthdesk-api.conf  nginx-healthdesk-landing.conf
src/: App.tsx  i18n.ts  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/nsis/: Polish.nsh
src-tauri/src/: ads.rs  calendar.rs  commands.rs  config.rs  database.rs  i18n.rs  lib.rs  main.rs  popup_manager.rs  scheduler.rs  telemetry.rs  tracker.rs  tray.rs  youtube.rs
src-tauri/src/audio/: generators.rs  mod.rs
src/pages/: HelpPage.tsx  (+7 more)
ui/: break_fullscreen.py  break_window.py  exercises.py  main_window.py  water_widget.py  yt_search_dialog.py
(+116 files in other folders)
