[package]
name = "healthdesk"
version = "2.0.10"
edition = "2021"
rust-version = "1.77"

[lib]
name = "healthdesk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "healthdesk"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9"
dirs = "6"
uuid = { version = "1", features = ["v4"] }
rodio = "0.19"
log = "0.4"
env_logger = "0.11"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_UI_WindowsAndMessaging",
  "Win32_Foundation",
  "Win32_System_Threading",
  "Win32_System_ProcessStatus",
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
